# CVAE-ScratchGAN-Password-guesser

./: LICENSE  README.md  config.yaml  generate.py  pyproject.toml  train.py
models/rockyou/: pcfg_structures.json  vocab.json
src/: config.py  dataset.py  generator.py  model.py  pcfg.py  tokenizer.py  trainer.py  vocab.py
src_datasets/: dataset_filter.py  dataset_splitter.py
