[project]
name = "cvae-scratchgan-password-guesser"
version = "0.1.0"
description = "CVAE-ScratchGAN Password guesser"
authors = [{ name = "Adam Brída", email = "248201@vutbr.cz" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "torch>=2.10.0",
    "tqdm>=4.66.0",
    "PyYAML>=6.0.0",
    "numpy>=1.26.0",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu129" }